<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/menstrual_cycle_tracker"
        android:fontFamily="serif"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/sigupimg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/welcome_to_an_easier_period"
        android:fontFamily="serif"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/track_your_cycle_symptoms_and_more_get_personalized_insights"
        android:fontFamily="serif"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_shape"
        android:backgroundTint="#FBDEE8"
        android:gravity="start|center"
        android:hint="@string/email"
        android:fontFamily="serif"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="6dp"
        android:textColor="#876370"
        android:textColorHint="#876370"
        android:textSize="16sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle_shape"
        android:backgroundTint="#FBDEE8"
        android:gravity="start|center"
        android:hint="@string/password"
        android:fontFamily="serif"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#876370"
        android:textSize="16sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/reTextPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle_shape"
        android:backgroundTint="#FBDEE8"
        android:gravity="start|center"
        android:fontFamily="serif"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#876370"
        android:textSize="16sp"
        android:textStyle="normal" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnsignUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="#E51A5E"
        app:cardCornerRadius="50dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/text"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/sign_up"
                android:fontFamily="serif"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center" />




        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/alreadyUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/already_registered_log_in"
        android:fontFamily="serif"
        android:textColor="#E51A5E"
        android:textSize="15sp" />


</LinearLayout>