<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/log_in_to_your_account"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_shape"
        android:backgroundTint="#FBDEE8"
        android:gravity="start|center"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="6dp"
        android:textColor="#876370"
        android:textColorHint="#876370"
        android:textSize="16sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/rectangle_shape"
        android:backgroundTint="#FBDEE8"
        android:gravity="start|center"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#876370"
        android:textSize="16sp"
        android:textStyle="normal" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnlogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="#E51A5E"
        app:cardCornerRadius="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/log_in"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
            <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center" />




        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="#E51A5E"
        android:textSize="15sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/or"
        android:textSize="18sp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/loginWithGoogle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="#FBDEE8"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/google"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/log_in_with_google"
                android:textSize="23sp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>






