<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:abbreviationsBarColor="#FCF7FA"
            app:abbreviationsLabelsColor="#1C0D12"
            app:daysLabelsColor="#1C0D12"
            app:forwardButtonSrc="@drawable/forward"
            app:headerColor="#FCF7FA"
            app:headerLabelColor="#1C0D12"
            app:highlightedDaysLabelsColor="#E51A5E"
            app:pagesColor="#FCF7FA"
            app:previousButtonSrc="@drawable/previous"
            app:selectionColor="#E51A5E"
            app:swipeEnabled="true"
            app:todayLabelColor="#E51A5E" />

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#E51A5E"
            android:text="Update Calender"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:text="@string/average_cycle_length"
            android:textColor="#1C0D12"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/averageCycleLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:text="@string/loading"
            android:textColor="#964F66"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:fontFamily="serif"
            android:text="@string/average_period_length"
            android:textColor="#1C0D12"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/averagePeriodLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/loading"
            android:textColor="#964F66"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:fontFamily="serif"
            android:text="@string/total_period_days_in_last_year"
            android:textColor="#1C0D12"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalDaysThisYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:text="@string/loading"
            android:textColor="#964F66"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:fontFamily="serif"
            android:text="@string/total_period_days_in_last_month"
            android:textColor="#1C0D12"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalDaysThisMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:text="@string/loading"
            android:textColor="#964F66"
            android:textSize="15sp" />


    </LinearLayout>

</ScrollView>